syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.bok.parent.integration.grpc";
option java_outer_classname = "ParentProto";

service Parent {

  rpc GetEmail(EmailRequest) returns (EmailResponse);

}

message AccountId{
  uint64 accountId = 1;
}

message Boolean{
  bool value = 1;
}


message EmailRequest{
  uint64 accountId = 1;
}

message EmailResponse{
  string email = 1;
}